Fixed whitespace on buttons in 2 ways, see #29

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -79,7 +79,7 @@ img{
   display:block;
   /* The code below was useful when I had the chevron icon present at xs and sm form factors, 
 		but a better solution was to hide the chevron at those sizes */
-  /* white-space: normal;*/
+  white-space: normal;
 }
 
 .person .person-info{
